--- a/OculusRoomTiny/OculusRoomTiny (DX11)/Projects/Windows/VS2015/OculusRoomTiny (DX11).vcxproj
+++ b/OculusRoomTiny/OculusRoomTiny (DX11)/Projects/Windows/VS2015/OculusRoomTiny (DX11).vcxproj
@@ -157,7 +157,7 @@
       <TreatWarningAsError>true</TreatWarningAsError>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
       <AdditionalOptions>/d2Zi+ %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>C:\Users\brinkmwj.IT\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\include;C:\Users\brinkmwj.IT\Downloads\opencv_contrib-master\opencv_contrib-master\modules\aruco\include;C:\Users\brinkmwj.IT\Downloads\opencv\build\include;$(OVRSDKROOT)LibOVR/Include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\nongtm\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\include;C:\Users\nongtm\Downloads\opencv_contrib-master\opencv_contrib-master\modules\aruco\include;C:\Users\nongtm\Downloads\opencv\build\include;C:\Users\nongtm\Downloads\ovr_sdk_win_0.8.0.0\OculusSDK\LibOVR\Include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -165,8 +165,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
-      <AdditionalDependencies>$(OVRSDKROOT)LibOVR/Lib/Windows/$(Platform)/$(Configuration)/VS2015/LibOVR.lib;opencv_aruco310.lib;opencv_calib3d310.lib;opencv_core310.lib;opencv_features2d310.lib;opencv_flann310.lib;opencv_highgui310.lib;opencv_imgcodecs310.lib;opencv_imgproc310.lib;opencv_ml310.lib;opencv_videoio310.lib;ovrvision.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\brinkmwj.IT\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\bin\x86;C:\Users\brinkmwj.IT\Downloads\opencv\build\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>C:\Users\nongtm\Downloads\ovr_sdk_win_0.8.0.0\OculusSDK\LibOVR\Lib\Windows\$(Platform)\$(Configuration)\VS2015\LibOVR.lib;opencv_aruco310.lib;opencv_calib3d310.lib;opencv_core310.lib;opencv_features2d310.lib;opencv_flann310.lib;opencv_highgui310.lib;opencv_imgcodecs310.lib;opencv_imgproc310.lib;opencv_ml310.lib;opencv_videoio310.lib;ovrvision.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\nongtm\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\bin\x86;C:\Users\nongtm\Downloads\opencv\build\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Manifest>
       <EnableDPIAwareness>PerMonitorHighDPIAware</EnableDPIAwareness>
@@ -228,15 +228,15 @@
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <TreatWarningAsError>false</TreatWarningAsError>
       <RuntimeTypeInfo>false</RuntimeTypeInfo>
-      <AdditionalIncludeDirectories>C:\Users\brinkmwj.IT\Downloads\opencv_contrib-master\opencv_contrib-master\modules\aruco\include;C:\Users\brinkmwj.IT\Downloads\opencv\build\include;C:\Users\brinkmwj.IT\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\include;$(OVRSDKROOT)LibOVR/Include/;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\nongtm\Downloads\opencv_contrib-master\opencv_contrib-master\modules\aruco\include;C:\Users\nongtm\Downloads\opencv\build\include;C:\Users\nongtm\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\include;C:\Users\nongtm\Downloads\ovr_sdk_win_0.8.0.0\OculusSDK\LibOVR\Include\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Manifest>
       <EnableDPIAwareness>PerMonitorHighDPIAware</EnableDPIAwareness>
     </Manifest>
     <Link>
       <LinkTimeCodeGeneration>Default</LinkTimeCodeGeneration>
-      <AdditionalDependencies>$(OVRSDKROOT)LibOVR/Lib/Windows/$(Platform)/$(Configuration)/VS2015/LibOVR.lib;ovrvisiond.lib;opencv_aruco310d.lib;opencv_calib3d310d.lib;opencv_core310d.lib;opencv_features2d310d.lib;opencv_flann310d.lib;opencv_highgui310d.lib;opencv_imgcodecs310d.lib;opencv_imgproc310d.lib;opencv_ml310d.lib;opencv_videoio310d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\brinkmwj.IT\Downloads\opencv\build\lib\Debug;C:\Users\brinkmwj.IT\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\bin\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>C:\Users\nongtm\Downloads\ovr_sdk_win_0.8.0.0\OculusSDK\LibOVR\Lib\Windows\$(Platform)\$(Configuration)\VS2015\LibOVR.lib;ovrvisiond.lib;opencv_aruco310d.lib;opencv_calib3d310d.lib;opencv_core310d.lib;opencv_features2d310d.lib;opencv_flann310d.lib;opencv_highgui310d.lib;opencv_imgcodecs310d.lib;opencv_imgproc310d.lib;opencv_ml310d.lib;opencv_videoio310d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\nongtm\Downloads\opencv\build\lib\Debug;C:\Users\nongtm\Downloads\OVRVision_1.6.1\ovrvisionprosdk_windows\ovrvisionprosdk_windows\bin\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
